fixed note visibility

--- a/src/style.css
+++ b/src/style.css
@@ -168,9 +168,15 @@ body {
   width: max-content !important;
 }
 
+#small-screen-note {
+  display: none;
+}
 @media (max-width: 1030px) {
   #resume-page {
     display: none;
+  }
+  #small-screen-note {
+    display: block;
   }
 }
 /* Template END */
